fix(card): align switches in cards by level

--- a/client/src/components/Card/Card.module.scss
+++ b/client/src/components/Card/Card.module.scss
@@ -4,6 +4,8 @@
   width: 288px;
   background-color: $white;
   border-radius: 10px;
+  display: flex;
+  flex-direction: column;
 
   &:hover {
     box-shadow: 0px 5px 15px $black;
@@ -84,6 +86,8 @@
 
 .components {
   padding: 0 10px 10px;
+  margin-bottom: auto;
+
 
   @media (max-width: 468px) {
     font-size: 14px;
